errors.txt
Checking delivery files in .
./a.out: [Banana] [Major] unwanted file (C-O1)
cd lib && make && cp libUtilsLib.a ../ && cd ../
make[1]: Entering directory '/home/vyvi/work/CHOCOtest/lib'
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/char/is_digit.c -o src/char/is_digit.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/char/is_letter.c -o src/char/is_letter.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/char/is_lowerletter.c -o src/char/is_lowerletter.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/char/is_upperletter.c -o src/char/is_upperletter.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/char/my_putchar.c -o src/char/my_putchar.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/char/nb_char.c -o src/char/nb_char.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/maths/my_find_prime_sup.c -o src/maths/my_find_prime_sup.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/maths/my_is_prime.c -o src/maths/my_is_prime.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/maths/my_isneg.c -o src/maths/my_isneg.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/maths/my_power.c -o src/maths/my_power.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/maths/my_sort_int_array.c -o src/maths/my_sort_int_array.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/maths/my_factorial.c -o src/maths/my_factorial.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/maths/matrice.c -o src/maths/matrice.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/maths/square_root.c -o src/maths/square_root.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/int_str/get_precision.c -o src/int_str/get_precision.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/int_str/my_get_double_nbr.c -o src/int_str/my_get_double_nbr.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/int_str/my_get_longlong_nbr.c -o src/int_str/my_get_longlong_nbr.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/int_str/my_getnbr.c -o src/int_str/my_getnbr.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/int_str/my_put_nbr.c -o src/int_str/my_put_nbr.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/int_str/verif_double.c -o src/int_str/verif_double.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/int_str/verif_int.c -o src/int_str/verif_int.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/matrice/ac.c -o src/matrice/ac.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/matrice/alpha_sort.c -o src/matrice/alpha_sort.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/matrice/count_lines.c -o src/matrice/count_lines.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/matrice/my_show_word_array.c -o src/matrice/my_show_word_array.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/matrice/str_to_array.c -o src/matrice/str_to_array.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/matrice/str_to_matrice.c -o src/matrice/str_to_matrice.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/mem/free_table.c -o src/mem/free_table.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/mem/my_memcpy.c -o src/mem/my_memcpy.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/mem/my_strcpy.c -o src/mem/my_strcpy.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/mem/my_strdup.c -o src/mem/my_strdup.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/mem/my_strncpy.c -o src/mem/my_strncpy.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/mem/my_swap.c -o src/mem/my_swap.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/mem/open_file.c -o src/mem/open_file.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/mem/strslice.c -o src/mem/strslice.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/mem/my_strjoin_three.c -o src/mem/my_strjoin_three.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/mem/my_strjoin.c -o src/mem/my_strjoin.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/mem/putcat.c -o src/mem/putcat.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/str/count_contains_char.c -o src/str/count_contains_char.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/str/my_putstr.c -o src/str/my_putstr.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/str/my_revstr.c -o src/str/my_revstr.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/str/my_str_is_only_space.c -o src/str/my_str_is_only_space.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/str/my_str_isalpha.c -o src/str/my_str_isalpha.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/str/my_str_isalphanumeric.c -o src/str/my_str_isalphanumeric.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/str/my_str_islower.c -o src/str/my_str_islower.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/str/my_str_isnum.c -o src/str/my_str_isnum.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/str/my_str_isprintable.c -o src/str/my_str_isprintable.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/str/my_str_isupper.c -o src/str/my_str_isupper.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/str/my_strcapitalize.c -o src/str/my_strcapitalize.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/str/my_strcmp_no_case.c -o src/str/my_strcmp_no_case.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/str/my_strcmp.c -o src/str/my_strcmp.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/str/my_strlen.c -o src/str/my_strlen.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/str/my_strncmp.c -o src/str/my_strncmp.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/str/my_strstr.c -o src/str/my_strstr.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/str/my_strupcase.c -o src/str/my_strupcase.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/str/my_strlowcase.c -o src/str/my_strlowcase.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -c src/str/take_user_input.c -o src/str/take_user_input.o
make[1]: Leaving directory '/home/vyvi/work/CHOCOtest/lib'
epiclang -Wall -Wextra -g3 -Iinclude -O0 -fno-builtin -c src/minishell.c -o src/minishell.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -fno-builtin -c src/free_alloc.c -o src/free_alloc.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -fno-builtin -c src/parsing/alloc_launch_errors.c -o src/parsing/alloc_launch_errors.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -fno-builtin -c src/parsing/logic.c -o src/parsing/logic.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -fno-builtin -c src/commands_handling/commands.c -o src/commands_handling/commands.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -fno-builtin -c src/commands_handling/env.c -o src/commands_handling/env.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -fno-builtin -c src/commands_handling/builtins.c -o src/commands_handling/builtins.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -fno-builtin -c src/execute/child_proc.c -o src/execute/child_proc.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -fno-builtin -c src/execute/parent_proc.c -o src/execute/parent_proc.o
epiclang -Wall -Wextra -g3 -Iinclude -O0 -fno-builtin -c src/main.c -o src/main.o
src/main.c:13:9: error: redefinition of 'ac'
   13 |     int ac=0;
      |         ^
src/main.c:10:14: note: previous definition is here
   10 | int main(int ac, char **av, char **envp)
      |              ^
src/main.c:13:9: warning: [Banana] [Major] variable not declared at the beginning of the function (C-L5)
   13 |     int ac=0;
      |         ^
1 warning and 1 error generated.
make: *** [Makefile:73: src/main.o] Error 1
